# campuson

./: .env.example  .eslintrc.json  .gitignore  .prettierignore  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: .gitignore  Dockerfile  alembic.ini  pyproject.toml  render.yaml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260409_0001_initial_user_table.py  20260410_0002_audit_logs.py  20260411_0003_questions.py  20260412_0004_diagnostic_and_ai_profile.py  20260413_0005_learning_history.py  20260414_0006_ai_request_logs.py  20260415_0007_kb_documents.py  20260416_0008_email_verification.py  20260417_0009_question_stats_interactions.py  20260418_0010_professor_classes.py  20260419_0011_assignments.py  20260420_0012_roles_announcements.py  20260421_0013_practicum.py  20260421_0014_practicum_modes.py  20260422_0015_question_review_metadata.py  20260423_0016_ops_infrastructure.py  20260424_0017_education_effectiveness.py  20260425_0018_scalability_infrastructure.py  20260426_0019_token_revocation.py
apps/api/app/: __init__.py  main.py  worker.py
apps/api/app/api/: advanced_recommendation.py  ai.py  announcements.py  assignments.py  auth.py  blueprint.py  calendar.py  classes.py  concept_tags.py  cost.py  diagnostic.py  error_analysis.py  feature_flags.py  file_upload.py  health.py  jobs.py  kb.py  learning_history.py  lms.py  notifications.py  ops_dashboard.py  osce.py  stats.py  (+9 more)
apps/api/scripts/: eval_ai_responses.py  load_test.py  ocr_nursing_pdfs.py  seed_kb.py  seed_questions.py
apps/api/tests/: conftest.py
(+198 files in other folders)
